@@ -431,7 +431,7 @@ server.php?action=end_rob_house&user_id=[id number]
                                &wife_killed_robber=[0(false) or 1(true)]
 							   &wife_killed=[0(false) or 1(true)]
                                &wife_robbed=[0(false) or 1(true)]
-							   &any_family_killed=[0(false) or 1(true)]
+							   &family_killed_count=[number killed]
 							   $backpack_contents=[contents as ASCII string]
                                &move_list=[move list as ASCII string]
                                &house_map=[house map ASCII string]
